--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
 }
 
 .App {
@@ -33,4 +34,36 @@ header {
 .location-marker {
   font-size: 2rem;
   color: #961515;
+}
+
+.location-info-box {
+  position: absolute;
+  top: 120px;
+  right: 80px;
+  width: 400px;
+  min-height: 200px;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.6);
+  border-radius: 5px;
+  font-size: 18px;
+  color: #fff;
+}
+
+.location-info-box-btn-close {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  font-size: 1rem;
+  background: none;
+  color: #fff;
+  border: none;
+}
+
+.location-info-box h3 {
+  padding: 0.5rem;
+}
+
+.location-info-box-more-info {
+  margin-top: 1rem;
+  padding: 0.2rem;
 }
