--- a/src/App.css
+++ b/src/App.css
@@ -12,12 +12,12 @@
 }
 
 header {
-  margin: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 .header-border {
   width: 90%;
-  margin: 1rem auto auto auto;
+  margin-top: 0.5rem;
   border-bottom: 1px solid #c4c4d6;
 }
 
@@ -43,7 +43,7 @@ header {
 }
 
 .select-data-container-pins-text {
-  padding-bottom: 0.2rem;
+  padding-bottom: 0.7rem;
   font-size: 0.8rem;
 }
 
@@ -125,37 +125,42 @@ header {
 }
 
 .map {
-  height: calc(100vh - 128px);
+  height: calc(100vh - 120px);
   width: 100%;
 }
 
 @media only screen and (max-width: 790px) {
   .map {
-    height: calc(100vh - 176px);
+    height: calc(100vh - 158px);
   }
 }
 
 @media only screen and (max-width: 480px) {
   .map {
-    height: calc(100vh - 166px);
+    height: calc(100vh - 150px);
   }
 }
 
+@media only screen and (max-width: 420px) {
+  .map {
+    height: calc(100vh - 147px);
+  }
+}
 @media only screen and (max-width: 390px) {
   .map {
-    height: calc(100vh - 151px);
+    height: calc(100vh - 135px);
   }
 }
 
 @media only screen and (max-width: 330px) {
   .map {
-    height: calc(100vh - 141px);
+    height: calc(100vh - 125px);
   }
 }
 
 @media only screen and (max-width: 275px) {
   .map {
-    height: calc(100vh - 114px);
+    height: calc(100vh - 105px);
   }
 }
 
@@ -235,27 +240,26 @@ header {
   }
 }
 
-@media only screen and (max-width: 480px) {
+/* @media only screen and (max-width: 480px) {
+  .location-info-box {
+    top: 45%;
+  }
+} */
+
+/* @media only screen and (max-width: 440px) {
   .location-info-box {
     top: 40%;
   }
-}
+} */
 
-@media only screen and (max-width: 440px) {
-  .location-info-box {
-    top: 40%;
-  }
-}
-
-@media only screen and (max-width: 380px) {
+/* @media only screen and (max-width: 380px) {
   .location-info-box {
     top: 40.5%;
   }
-}
+} */
 
 @media only screen and (max-width: 360px) {
   .location-info-box {
-    top: 41%;
     width: 200px;
   }
 }
@@ -338,6 +342,11 @@ header {
     top: 220px;
   }
 }
+@media only screen and (max-width: 710px) {
+  .show-local-area-graph-wrapper {
+    top: 250px;
+  }
+}
 
 @media only screen and (max-width: 650px) {
   .show-local-area-graph-wrapper {
@@ -363,9 +372,9 @@ header {
 
 @media only screen and (max-width: 500px) {
   .show-local-area-graph-wrapper {
-    top: 170px;
+    top: 200px;
     width: 350px;
-    height: 460px;
+    height: 560px;
   }
   .chart-and-legend-container {
     flex-direction: column;
@@ -391,7 +400,7 @@ header {
   .rv-discrete-color-legend {
     display: grid;
     justify-content: center;
-    grid-gap: 25px;
+    grid-column-gap: 25px;
     margin-top: 0.5rem;
     grid-template-columns: auto auto;
     grid-template-columns: 145px 120px;
@@ -407,15 +416,14 @@ header {
   }
 }
 
-@media only screen and (max-width: 420px) {
+@media only screen and (max-width: 440px) {
   .show-local-area-graph-wrapper {
-    top: 170px;
+    top: 180px;
     width: 300px;
-    height: 460px;
   }
 }
 
-@media only screen and (max-width: 380px) {
+@media only screen and (max-width: 400px) {
   .show-local-area-graph-wrapper {
     top: 0;
     left: 0;
@@ -438,7 +446,7 @@ header {
 
   .rv-discrete-color-legend {
     grid-template-columns: 140px 140px;
-    grid-gap: 20px;
+    grid-column-gap: 25px;
   }
 
   .chart-and-legend-container {
@@ -459,7 +467,7 @@ header {
     font-size: 0.6rem;
   }
   .rv-discrete-color-legend {
-    grid-gap: 10px;
+    grid-column-gap: 25px;
   }
 }
 
